Agrega colores de pagina y nuevo archivo a src/scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,26 @@
+:root {
+  --pink-50: #fefbfb;
+  --pink-100: #fcecec;
+  --pink-300: #f9cfcf;
+  --pink-500: #f6b3b3;
+  --pink-700: #936b6b;
+  --pink-900: #312323;
+
+  --gold-50: #fefdf4;
+  --gold-100: #fef8cc;
+  --gold-300: #ffed68;
+  --gold-500: #fde22e;
+  --gold-700: #ffe41a;
+  --gold-900: #322d09;
+
+  --skyblue-50: #fbfefe;
+  --skyblue-100: #f0fcfc;
+  --skyblue-300: #d8f9f9;
+  --skyblue-500: #c1f6f6;
+  --skyblue-700: #739393;
+  --skyblue-900: #263131;
+}
+
 * {
   margin: 0px;
 }
