Modifica apariencia de elementos de header

--- a/src/styles/_hamburguerMenu.scss
+++ b/src/styles/_hamburguerMenu.scss
@@ -1,3 +1,15 @@
 .hamburguerContaiener.hide {
   display: none;
 }
+
+.toogleHamburguerMenu {
+  background-color: transparent;
+  height: fit-content;
+  width: fit-content;
+  padding: 10px;
+  border: none;
+}
+
+.toogleHamburguerMenu:active {
+  background-color: rgba(128, 128, 128, 0.425);
+}
