--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -25,6 +25,10 @@
   margin: 0px;
 }
 
+#root {
+  padding: 20px;
+}
+
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
