--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,4 +1,16 @@
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.logoContainer {
+  img {
+    height: auto;
+    width: 70px;
+  }
+
+  span {
+    display: none;
+  }
 }
