--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -28,10 +28,25 @@ hr {
   background-color: var(--pink-500);
 }
 
+.productsCategories {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0px 20px;
+  gap: 30px;
+  margin-top: 20px;
+}
+
 @media (min-width: 700px) {
   .introduction {
     flex-direction: row;
     justify-content: center;
     gap: 10px;
+  }
+}
+
+@media (min-width: 530px) {
+  .productsCategories {
+    justify-content: space-between;
   }
 }
