--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 30px;
 }
 
 .imgContainer {
@@ -32,7 +33,7 @@ hr {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 0px 20px;
+  padding: 30px 20px;
   gap: 30px;
   margin-top: 20px;
 }
