--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,6 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 50px;
 }
 
 .logoContainer {
@@ -12,5 +13,11 @@ header {
 
   span {
     display: none;
+  }
+}
+
+@media (min-width: 500px) {
+  header {
+    margin-bottom: 0px;
   }
 }
