--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -29,6 +29,9 @@
   padding: 10px 20px 0px 20px;
   overflow-x: clip;
   background: var(--skyblue-50);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .material-symbols-outlined {
