--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,6 +3,11 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
+  position: relative;
+  padding: 10px 20px 0px 20px;
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .logoContainer {
