Agrega padding individualmente a contenedores

--- a/src/styles/_itemPage.scss
+++ b/src/styles/_itemPage.scss
@@ -3,8 +3,9 @@
   gap: 20px;
   justify-content: center;
   flex-wrap: wrap;
-  padding-bottom: 20px;
   flex: 1;
+  padding: 0px 20px;
+  padding-bottom: 20px;
 }
 
 .itemContaienr {
