--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,11 +3,13 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
-  position: relative;
   padding: 10px 20px 0px 20px;
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: sticky;
+  top: 0;
+  background-color: var(--skyblue-50);
 }
 
 .logoContainer {
@@ -24,5 +26,9 @@ header {
 @media (min-width: 500px) {
   header {
     margin-bottom: 0px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    position: static;
   }
 }
