--- a/src/styles/_wideNav.scss
+++ b/src/styles/_wideNav.scss
@@ -3,6 +3,8 @@
   margin-bottom: 30px;
   background-color: var(--pink-500);
   width: 100vw;
+  position: sticky;
+  top: 0;
 
   ul {
     list-style: none;
@@ -17,5 +19,8 @@
 @media (min-width: 500px) {
   .wideNav {
     display: flex;
+    -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 }
