--- a/src/styles/_shoppingCartMenu.scss
+++ b/src/styles/_shoppingCartMenu.scss
@@ -51,6 +51,24 @@
   -webkit-box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.backdrop {
+  background-color: gray;
+  position: fixed;
+  inset: 0;
+  opacity: 0%;
+  pointer-events: none;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 1;
+}
+
+.backdrop.show,
+.backdrop.showing {
+  opacity: 80%;
+  pointer-events: auto;
 }
 
 @media (min-width: 530px) {
