--- a/src/styles/_shoppingCartMenu.scss
+++ b/src/styles/_shoppingCartMenu.scss
@@ -6,12 +6,12 @@
   width: 100vw;
   height: 100vh;
   right: 0;
-  padding: 20px;
+  padding: 10px 0px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
   transform-origin: right;
   transform: scaleX(100%);
   transition: transform 0.2s ease-in-out;
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 400px;
+  height: 300px;
   overflow-y: scroll;
   -webkit-box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -55,6 +55,16 @@
   box-sizing: border-box;
 }
 
+.hideShoppingCart {
+  background: transparent;
+  border: none;
+  padding: 10px;
+}
+
+.hideShoppingCart:active {
+  background-color: rgba(128, 128, 128, 0.425);
+}
+
 .backdrop {
   background-color: gray;
   position: fixed;
@@ -69,6 +79,12 @@
 .backdrop.showing {
   opacity: 80%;
   pointer-events: auto;
+}
+
+@media (min-width: 400px) {
+  .shoppingCartContainer {
+    padding: 20px;
+  }
 }
 
 @media (min-width: 530px) {
