--- a/src/styles/_addCcForm.scss
+++ b/src/styles/_addCcForm.scss
@@ -8,12 +8,16 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  transition: transform 0.5s linear;
+  transition: transform 0.3s ease-in-out;
   transform: translateY(100%);
+  background: var(--gold-50);
+  color: var(--skyblue-900);
+  width: 80vw;
+  max-width: 1000px;
 }
 .addCreditCardModal.showing {
   display: flex;
-  transform: translateY(-100%);
+  transform: translateY(-120%);
 }
 
 .addCreditCardModal.show {
@@ -22,7 +26,7 @@
 }
 
 .addCreditCardModal.hiding {
-  transform: translateY(-100%);
+  transform: translateY(-120%);
 }
 
 .addCreditCardModal.hide {
@@ -32,21 +36,46 @@
 .addCreditCardForm {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
+  width: 80%;
+  max-width: 700px;
 
   label {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    font-weight: 700;
   }
 
   fieldset {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    border: none;
+    border-left: 2px solid var(--skyblue-700);
     input {
       max-width: 50px;
     }
+  }
+
+  .textInputContainer {
+    flex: 1;
+    min-height: 70px;
+    max-width: 300px;
+  }
+
+  input {
+    padding: 2px 5px;
+    background-color: var(--skyblue-700);
+    -webkit-box-shadow: inset 3px 3px 5px 0px rgb(0 0 0 / 50%);
+    -moz-box-shadow: inset 3px 3px 5px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 2px 2px 5px 0px rgba(0, 0, 0, 0.7);
+    border: none;
+    color: var(--gold-300);
+  }
+
+  .errorInputText {
+    color: #a30000;
   }
 }
 
@@ -55,18 +84,20 @@
   justify-self: center;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   .addCreditCardForm {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+    gap: 15px;
+    width: 70vw;
 
     fieldset {
       grid-column: 1/3;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      gap: 15px;
+      max-width: 500px;
+      gap: 30px;
     }
   }
 }
