--- a/src/styles/_addCcForm.scss
+++ b/src/styles/_addCcForm.scss
@@ -1,7 +1,7 @@
 .addCreditCardModal {
   z-index: 1;
   background-color: var(--skyblue-50);
-  padding: 30px 30px;
+  padding: 40px 15px;
   position: absolute;
   top: 20px;
   display: flex;
@@ -77,6 +77,18 @@
   .errorInputText {
     color: #a30000;
   }
+}
+
+.closeAddCreditCard {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+}
+
+.closeAddCreditCard:active {
+  background-color: rgba(128, 128, 128, 0.425);
 }
 
 .saveNewCreditCard {
