--- a/src/styles/_shoppingCartMenu.scss
+++ b/src/styles/_shoppingCartMenu.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   gap: 20px;
   height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: inset 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
