Modifica informacion de pago

--- a/src/styles/_checkout.scss
+++ b/src/styles/_checkout.scss
@@ -25,6 +25,12 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  background: var(--pink-300);
+  color: #2d0282;
+  padding: 10px 20px;
+  -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
 .paymentInforCard {
@@ -45,5 +51,23 @@
 }
 
 .payButton {
-  align-self: flex-start;
+  align-self: center;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  padding: 5px 15px;
+  background: var(--gold-700);
+  color: var(--pink-900);
+  border: 3px solid var(--pink-50);
+  transition: transform 0.5s ease-in-out;
+}
+
+.payButton:hover,
+.payButton:focus-visible {
+  transform: scale(105%);
+  border: 3px solid black;
+}
+
+.payButton:active {
+  border: 3px solid var(--pink-50);
 }
