--- a/src/styles/_checkout.scss
+++ b/src/styles/_checkout.scss
@@ -25,8 +25,8 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  background: var(--pink-300);
-  color: #2d0282;
+  background: var(--pink-50);
+  color: var(--pink-900);
   padding: 10px 20px;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.25);
@@ -58,7 +58,7 @@
   padding: 5px 15px;
   background: var(--gold-700);
   color: var(--pink-900);
-  border: 3px solid var(--pink-50);
+  border: 3px solid var(--pink-300);
   transition: transform 0.5s ease-in-out;
 }
 
@@ -69,5 +69,5 @@
 }
 
 .payButton:active {
-  border: 3px solid var(--pink-50);
+  border: 3px solid var(--pink-300);
 }
