--- a/src/styles/_shoppingItem.scss
+++ b/src/styles/_shoppingItem.scss
@@ -1,12 +1,11 @@
 .itemCard {
   display: flex;
-  gap: 10px;
   background: var(--gold-500);
   max-width: 600px;
   min-width: 300px;
   img {
     height: auto;
-    width: 130px;
+    width: 100px;
   }
   .content {
     display: flex;
@@ -23,8 +22,41 @@
     }
   }
 
+  .text {
+    gap: 5px;
+  }
+
   .top {
     display: flex;
     justify-content: space-between;
+  }
+}
+
+.removeItemButton {
+  background: var(--skyblue-50);
+  border: none;
+  padding: 2px 10px;
+  height: 30px;
+  -webkit-box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.3);
+  transition: transform 0.5s ease-in-out;
+}
+
+.removeItemButton:focus-visible,
+.removeItemButton:hover {
+  background: rgb(194, 191, 191);
+  transform: scale(105%);
+}
+
+.removeItemButton:active {
+  background: var(--skyblue-50);
+}
+
+@media (min-width) {
+  .itemCard {
+    img {
+      width: 130px;
+    }
   }
 }
