--- a/src/styles/_categoryPage.scss
+++ b/src/styles/_categoryPage.scss
@@ -12,6 +12,9 @@
   img {
     height: auto;
     width: 200px;
+    -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -33,11 +36,22 @@
   margin-top: 20px;
 }
 
+.categoryPageMain {
+  padding: 0px 20px;
+}
+
 @media (min-width: 700px) {
   .categoryInfo {
     flex-direction: row;
     justify-content: center;
-    gap: 10px;
+    gap: 40px;
+    .categoryText {
+      padding: 10px;
+      background-color: var(--skyblue-50);
+      -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
   }
 }
 
