--- a/src/styles/_itemPage.scss
+++ b/src/styles/_itemPage.scss
@@ -8,10 +8,16 @@
   padding-bottom: 20px;
 }
 
-.itemContaienr {
+.itemContainer {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 20px;
+  height: fit-content;
+  background-color: var(--skyblue-50);
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .itemInformation {
@@ -36,4 +42,22 @@
     align-items: center;
     gap: 10px;
   }
+}
+
+.addToCartButton {
+  padding: 5px 15px;
+  background: var(--gold-700);
+  color: var(--pink-900);
+  border: 3px solid var(--pink-300);
+  transition: transform 0.3s ease-in-out;
+}
+
+.addToCartButton:hover,
+.addToCartButton:focus-visible {
+  transform: scale(105%);
+  border: 3px solid black;
+}
+
+.addToCartButton:active {
+  border: 3px solid var(--pink-300);
 }
