--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,5 +1,64 @@
 footer {
   width: 100vw;
-  padding: 10px 20px;
   background-color: var(--pink-500);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.contactoContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.phoneNumber {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.instagram {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.ubicacionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.ubicacion {
+  display: flex;
+  align-items: center;
+}
+
+.ubicacionContainer {
+  iframe {
+    border: none;
+    width: 320px;
+    align-self: center;
+  }
+}
+
+@media (min-width: 400px) {
+  footer {
+    padding: 10px 20px;
+  }
+}
+
+@media (min-width: 700px) {
+  footer {
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  .ubicacionContainer {
+    margin-right: 55px;
+    iframe {
+      width: 400px;
+    }
+  }
 }
