Agrega font family a texto

--- a/src/styles/_authetication.scss
+++ b/src/styles/_authetication.scss
@@ -43,6 +43,7 @@
   transition: transform 0.3s ease-in-out;
   text-decoration: none;
   color: var(--pink-900);
+  font-size: 16px;
 }
 
 .logInButton:hover,
@@ -62,6 +63,7 @@
   transition: transform 0.3s ease-in-out;
   text-decoration: none;
   color: var(--pink-900);
+  font-size: 16px;
 }
 
 .signUpButton:hover,
