--- a/src/styles/_itemPage.scss
+++ b/src/styles/_itemPage.scss
@@ -50,6 +50,7 @@
   color: var(--pink-900);
   border: 3px solid var(--pink-300);
   transition: transform 0.3s ease-in-out;
+  font-size: 16px;
 }
 
 .addToCartButton:hover,
