--- a/src/styles/_wideNav.scss
+++ b/src/styles/_wideNav.scss
@@ -14,9 +14,13 @@
     flex: 1;
     max-width: 500px;
     padding: 10px 20px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
     a {
       text-decoration: none;
-      color: #0b1b1b;
+      color: #0b1b1bb5;
     }
   }
 }
@@ -24,6 +28,7 @@
 .chosenLinkNav {
   padding-bottom: 3px;
   border-bottom: 3px solid var(--gold-500);
+  color: #0b1b1b !important;
 }
 
 @media (min-width: 500px) {
