--- a/src/styles/_shoppingCart.scss
+++ b/src/styles/_shoppingCart.scss
@@ -10,7 +10,7 @@
     top: 0;
     right: 0;
     padding: 1px 5px;
-    background: aqua;
+    background: var(--pink-500);
     border-radius: 20px;
   }
 }
